solc_mutator_ossfuzz_seed_corpus/test_sol/test_6d7e195f4d1fb6ef515869bbdbb2a4f8fbfe048144cb734ca4c409ae5abfa4fe_eff6996db94f0a3131da224ca61977dcdf1ec9c9_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  type T0 is bool;
  function f0(function (int72, L0.T0) external   returns (uint168, uint224) i0,address payable i1) public    returns(int248 o0,function (L0.T0[] memory, address) external   o1)
  {
  }
  type T1 is address payable;
  function f1(function () internal   returns (bytes memory, bytes11, bytes30) i0) public   
  {
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52
  }
  using L0 for *;
  function f2(bool i0,address payable i1,address payable i2) external    returns(L0.T0 o0)
  {
  }
  event ev0(bytes14  ep0, int56  ep1);
}
using L0 for uint;

==== Source: su1.sol ====
contract C0 {
  fallback() external virtual  
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("0000000000009bfa995c5450db5901a2197cbb"));
    (bool l2, bytes memory l3) = address(this).call(bytes(string("ffffffffffffffffffffffffffffffffffffffffffffffffffffa16ed493da7bb945a97609a5")));
  }
  bytes28   s0 = bytes28(0x7dd0d9236cf53f42abf9c5e344d7765d1a3c110764b333690baf3948);
  bytes3  public s1 = bytes3(0xffffff);
  mapping(bool => bool)   s2;
  int232   s3 = int232(0);
  constructor()   {
    s2[(bytes18(0x440f0e189551f34c02d42de25ae62599faf7) <= bytes18(0xa683465c8148b67d72bd77a7578d37db5785))] = ((((((uint88(309485009821345068724781055) * uint88(0)) * uint88(0)) - uint88(309485009821345068724781055)) ** uint104(uint104(0))) ** uint32(uint32(0))) != uint88(0));
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes("49d205402977d95fffffffffffffffffffff"));
      (bool l2, bytes memory l3) = address(this).call(bytes("00000000000000000000000000000000000000000000000000000000000000000000000000000000"));
      (bool l4, bytes memory l5) = address(this).call(bytes("00000000000000000000000000000000000000000000000000000000"));
    }
  }
  event ev1() anonymous;
}
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:287-353): Internal type is not allowed for public or external functions.
